--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "file-loader": "^0.8.4",
     "glob": "^6.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
+    "json-loader": "^0.5.4",
     "karma": "^0.13.9",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^0.5.3",
@@ -50,27 +51,33 @@
     "lodash": "^3.10.1",
     "minimist": "^1.2.0",
     "mocha": "^2.2.5",
+    "node-sass": "^3.4.2",
     "null-loader": "^0.1.1",
     "open": "0.0.5",
     "phantomjs": "^1.9.18",
+    "postcss": "^5.0.11",
+    "postcss-loader": "^0.8.0",
     "react-addons-test-utils": "^0.14.0",
     "react-hot-loader": "^1.2.9",
     "rimraf": "^2.4.3",
+    "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.0",
-    "webpack-dev-server": "^1.12.0",
-    "sass-loader": "^3.1.2",
-    "node-sass": "^3.4.2",
-    "postcss": "^5.0.11",
-    "postcss-loader": "^0.8.0"
+    "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
+    "async": "^1.5.1",
     "core-js": "^2.0.0",
+    "freezer-js": "^0.9.4",
+    "geojson-merge": "^0.1.0",
     "leaflet": "^0.7.7",
     "normalize.css": "^3.0.3",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
-    "react-leaflet": "^0.10.0"
+    "react-leaflet": "^0.10.0",
+    "superagent": "^1.6.1",
+    "turf-extent": "^1.0.4",
+    "turf-sample": "^1.0.1"
   }
 }
