--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "postcss-loader": "^0.8.0",
     "react-addons-test-utils": "^0.14.0",
     "react-hot-loader": "^1.2.9",
+    "react-tap-event-plugin": "^0.2.1",
     "rimraf": "^2.4.3",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
@@ -72,6 +73,7 @@
     "freezer-js": "^0.9.4",
     "geojson-merge": "^0.1.0",
     "leaflet": "^0.7.7",
+    "material-ui": "^0.14.1",
     "normalize.css": "^3.0.3",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
